# galois

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: ci-linux.yml  ci-mac.yml  ci-windows.yml
include/galois++/: array2d.h  element.h  field.h  fwd.h  primes.h
src/: field.cpp  primes.cpp  xtndeclare.h  xtndispatch.h
tests/: CMakeLists.txt  main.cpp
